--- a/style.css
+++ b/style.css
@@ -199,3 +199,129 @@ form.example button:hover {
   font-size: 50px;
   color: #333333;
 }
+ /* Three columns side by side */
+ .column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+} 
+/* Footer Styling */
+#footer {
+  color: #ffffff;
+  background-color: #000000;
+  height: 330px;
+}
+
+#footer .column {
+  float: left;
+  width: calc((100% - 90px)/4);
+  padding: 30px 15px;
+}
+
+#footer .logo {
+  font-family: 'Pacifico', cursive;
+  font-size: 28px;
+  color: #f38630;
+  text-decoration: none;
+}
+
+#footer .logo:hover {
+  color: #fa6900;
+}
+
+#footer h2 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+#footer i {
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  line-height: 30px;
+}
+
+#footer1 {
+  padding-left: 0 !important;
+  padding-top: 20px !important; 
+}
+
+#footer2 {
+  text-align: center;
+}
+
+#footer3 a {
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+#footer4 {
+  padding-right: 0 !important;
+}
+
+#footer:after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+#copyright {  
+  height: 60px;
+  width: 100%;
+  bottom: 0px;
+  position: bottom;
+  text-align: center;
+  line-height: 60px;
+  background-color: #fa6900;
+  border-top: 3px solid #f38630;
+  clear: both;
+}
